# homework_10_1

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
htmlcov/: index.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  operations.py  output_data.py  processing.py  regex_searching.py  utils.py  widget.py
tests/: log_test.txt  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
utils/: add.py  hello.py
